discussion/kv_engine/174325/174325_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: SnoozeTime class

Change-Id: I5cf966fbd6fb69fe7ef9388299bcc6fa12fd97b9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-28 16:24:52.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-28 16:25:53.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17173/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:31:28: error: use of undeclared identifier "std" [clang-diagnostic-error]
template <class Duration = std::chrono::milliseconds>
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:48:9: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        snooze = desiredSnoozeTime;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:52:11: error: member initializer "snooze" does not name a non-static data member or base class [clang-diagnostic-error]
        : snooze(nonDurationSnoozeType) {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:72:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:72:62: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
                                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:73:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:73:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:78:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:78:62: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<NonDurationSnoozeType>(snooze) &&
                                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:79:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:79:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
               std::get<NonDurationSnoozeType>(snooze) ==
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:84:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::holds_alternative<Duration>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:84:49: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::holds_alternative<Duration>(snooze);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:88:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::get<NonDurationSnoozeType>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:88:48: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::get<NonDurationSnoozeType>(snooze);
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:92:16: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return std::get<Duration>(snooze);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:92:35: error: use of undeclared identifier "snooze" [clang-diagnostic-error]
        return std::get<Duration>(snooze);
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:96:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::variant<NonDurationSnoozeType, Duration> snooze;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17173/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:31:28:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17173/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16135/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
